The color attribute from Particle Instance Modifier is incorrect #112335

Closed
opened 2023-09-13 16:42:06 +02:00 by arius-cr · 2 comments
First-time contributor

System Information
Operating system: Windows-10-10.0.19041-SP0
Graphics card: NVIDIA GeForce RTX 4070 Ti/PCIe/SSE2 (4.5.0 NVIDIA 535.98)

Blender Version
Broken: 3.6.0, 3.6.1, 3.6.2 (caused by 16fbadde36)
Worked: 3.4.0, 3.5.0, 3.5.1 (not tested older than 3.4.0)

Short description of error
The color value of the Index layer always 0.
The color value of the Value layer always the same.

Exact steps for others to reproduce the error

  1. Add a Grid mesh, add a Particle System to it.
  2. Add a Cube mesh, add a Particle Instance Modifer to it, select the Grid in the Object field.
  3. Add two color attributes, with Face Corner and Byte Color settings, and name "Index" and "Random", to Cube.
  4. In Particle Instance Modifier, select "Index" layer in the Index field, select "Random" layer in the Value field.
  5. Open Spreadsheet, and select the Face Corner.
  6. the color value in the Index column always 0, and the color value in the Random column always the same.
**System Information** Operating system: Windows-10-10.0.19041-SP0 Graphics card: NVIDIA GeForce RTX 4070 Ti/PCIe/SSE2 (4.5.0 NVIDIA 535.98) **Blender Version** Broken: 3.6.0, 3.6.1, 3.6.2 (caused by 16fbadde36) Worked: 3.4.0, 3.5.0, 3.5.1 (not tested older than 3.4.0) **Short description of error** The color value of the Index layer always 0. The color value of the Value layer always the same. **Exact steps for others to reproduce the error** 1. Add a Grid mesh, add a Particle System to it. 2. Add a Cube mesh, add a Particle Instance Modifer to it, select the Grid in the Object field. 3. Add two color attributes, with Face Corner and Byte Color settings, and name "Index" and "Random", to Cube. 4. In Particle Instance Modifier, select "Index" layer in the Index field, select "Random" layer in the Value field. 5. Open Spreadsheet, and select the Face Corner. 6. the color value in the Index column always 0, and the color value in the Random column always the same.
arius-cr added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-09-13 16:42:07 +02:00
Iliya Katueshenock added the
Interest
Modeling
Interest
Modifiers
labels 2023-09-13 16:42:49 +02:00

I can confirm the problem.
It is a regression introduced sometime between 175b1b449ec2 (Mar 6) and 3fe7e1f03b1e (Mar 23)
Will bisect...

I can confirm the problem. It is a regression introduced sometime between `175b1b449ec2` (Mar 6) and `3fe7e1f03b1e` (Mar 23) Will bisect...

The problem was caused by 16fbadde36
@HooglyBoogly, can you check?

The problem was caused by 16fbadde36 @HooglyBoogly, can you check?
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-14 10:27:09 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#112335
No description provided.