Fix #112335: particle instance modifier outputs wrong attributes

This was caused by a mistake in 16fbadde36.