source/blender/modifiers/intern/MOD_particleinstance.cc
@@ -494,7 +494,7 @@ static Mesh *modifyMesh(ModifierData *md, const ModifierEvalContext *ctx, Mesh *
         for (; j; j--, orig_corner_i++, dst_corner_i++) {
           corner_verts[dst_corner_i] = orig_corner_verts[orig_corner_i] + (p_skip * totvert);
           corner_edges[dst_corner_i] = orig_corner_edges[orig_corner_i] + (p_skip * totedge);
-          const int vert = corner_verts[orig_corner_i];
+          const int vert = corner_verts[dst_corner_i];
           if (mloopcols_index != nullptr) {
             const int part_index = vert_part_index[vert];
             store_float_in_vcol(&mloopcols_index[dst_corner_i],
